--- a/bmma-app-server/src/main/resources/application.yaml
+++ b/bmma-app-server/src/main/resources/application.yaml
@@ -10,4 +10,4 @@ spring:
   datasource:
     username: root
     password: password
-    url: jdbc:mysql://mysql:3306/bmma-db
+    url: jdbc:mysql://localhost:3306/bmma-db
