--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,12 @@ services:
   mysql:
     image: mysql:5.7
     volumes:
-      - bmma-mysql-data:/var/lib/mysql
+      - mysql-data:/var/lib/mysql
     ports:
       - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: bmma-db
+      MYSQL_DATABASE: project-db
 
 volumes:
-  bmma-mysql-data:
+  mysql-data:
