--- a/app-server/src/main/resources/application.yaml
+++ b/app-server/src/main/resources/application.yaml
@@ -9,5 +9,5 @@ spring:
     show-sql: true
   datasource:
     username: root
-    password: password
-    url: jdbc:mysql://localhost:3306/project-db
+    password:
+    url: jdbc:mysql://localhost:3306/test
