--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3.7"
 services:
   mysql:
     image: mysql:5.7
+    container_name: mysql_database_container
     volumes:
       - mysql-data:/var/lib/mysql
     ports:
