--- a/app-server/src/main/resources/application.yaml
+++ b/app-server/src/main/resources/application.yaml
@@ -7,7 +7,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
   datasource:
     username: root
     password: password
-    url: jdbc:mysql://localhost:3306/project_db
+    url: jdbc:mysql://localhost:3306/project-db
