--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>app_server</artifactId>
 	<name>app_server</name>
 	<version>0.0.1-SNAPSHOT</version>
-	<description></description>
+	<description>server side implementation of social recipe platform</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -47,6 +47,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	</dependencies>
 
